--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <link href="https://fonts.googleapis.com/css?family=Raleway%7CRighteous" rel="stylesheet">
 
     <link rel="stylesheet" href="assests/css/style.css">
-    <title>Document</title>
+    <link rel='shortcut icon' type='image/x-icon' href="assests/images/favicon.ico" />
+    <title>Love Maths!</title>
 </head>
 <body>
     <h1 class="heading">
